--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                   </div>
                   <div class="col-md-5 ">
                     <div class="img-box">
-                      <img src="images/slider-img.png" alt="" />
+                      <img src="https://scontent.fdel1-2.fna.fbcdn.net/v/t39.30808-6/360085107_1378325613027239_3115210098210955874_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=oRpmJoC8nIkAX84LoBu&_nc_ht=scontent.fdel1-2.fna&oh=00_AfDdtqV3AmH2VXQf0pWo7-DgCNXw_CBH3fgPO_XRGQOdZQ&oe=64BF4BC0" alt="" />
                     </div>
                   </div>
                 </div>
